--- a/chatroomserver/chatroomserver/Properties/launchSettings.json
+++ b/chatroomserver/chatroomserver/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49969",
+      "applicationUrl": "http://localhost:1752",
       "sslPort": 44350
     }
   },
@@ -12,7 +12,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "user",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -20,8 +20,8 @@
     "chatroomserver": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "launchUrl": "user",
+      "applicationUrl": "https://localhost:44350;http://localhost:1752",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
