Prepared messages controller

--- a/chatroomserver/chatroomserver/chatroomserver.csproj
+++ b/chatroomserver/chatroomserver/chatroomserver.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <Folder Include="BussinessLogic\" />
+    <Folder Include="Controllers\ControllersModel\" />
   </ItemGroup>
 
 
