API documentation and Socket hub

--- a/chatroomserver/chatroomserver/chatroomserver.csproj
+++ b/chatroomserver/chatroomserver/chatroomserver.csproj
@@ -15,10 +15,11 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="BussinessLogic\" />
     <Folder Include="Controllers\ControllersModel\" />
   </ItemGroup>
 
